# kubeclient-rs

./: .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  README.md
examples/: get-secret.rs  list-nodes.rs  list-pods.rs
src/: client.rs  config.rs  data.rs  errors.rs  lib.rs  resources.rs
src/clients/: low_level.rs  mod.rs  resource_clients.rs
src/resources/: config_map.rs  daemon_set.rs  deployment.rs  mod.rs  network_policy.rs  node.rs  pod.rs  secret.rs  service.rs
