[package]
name = "kubeclient"
version = "0.1.0"
license = "MIT"
authors = ["Anthony Nowell <anowell@gmail.com>"]

description = "An ergonomic Kubernetes API client to manage Kubernetes resources"
documentation = "http://docs.rs/kubeclient"
repository = "https://github.com/anowell/kubeclient-rs"
readme = "README.md"

[dependencies]
base64 = "0.6.0"
chrono = { version = "0.4", features = ["serde"] }
error-chain = "0.11.0"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
serde_yaml = "0.7.1"
url = "1.5.1"
url_serde = "0.2.0"
openssl = "0.9.15"
walkdir = "1.0.7"
reqwest = "0.8.0"
